--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <img width="500" src="sakthi.jfif" alt="">
     <h1>thala ajith</h1>
     <img width="500" src="thala.jfif" alt="">
+    <h1>new</h1>
 </body>
 </html>
