--- a/barath.html
+++ b/barath.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>barath rose</title>
     <h1>yes</h1>
+    <h1>no</h1>
+    <img src="vadd.jfif" alt="">
 </head>
 <body>
     
